# NOM_Tech_Assign

./: .gitignore  CMakeLists.txt  README.md  project_config.h  sdkconfig  sdkconfig.old
certificates/: client.crt  client.csr  client.key
drivers/devices/DHT22/config/: DHT22_cfg.h
drivers/devices/DHT22/lib/: DHT22.c  DHT22.h
drivers/devices/irq_button/config/: irq_button_cfg.h
drivers/devices/irq_button/lib/: irq_button.c  irq_button.h
drivers/nvs/: nvs.c  nvs.h
main/: CMakeLists.txt  main.c
middleware/azure_interface/: azure_interface.c  azure_interface.h
protocols/http/lib/: http_server.c  http_server.h
protocols/http/webpage/: app.css  app.js  index.html
protocols/mqtt/config/: mqtt_cert.c  mqtt_cert.h  mqtt_cfg.c  mqtt_cfg.h
protocols/mqtt/lib/: mqtt.c  mqtt.h
protocols/sntp/config/: sntp_cfg.c  sntp_cfg.h
protocols/sntp/lib/: sntp.c  sntp.h
protocols/wifi/config/: wifi_cfg.c  wifi_cfg.h
protocols/wifi/lib/: wifi.c  wifi.h
