idf_component_register( SRCS    "main.c" 
                                "../protocols/wifi/lib/wifi.c"
                                "../protocols/wifi/config/wifi_cfg.c"
                                "../protocols/http/lib/http_server.c"
                                "../protocols/sntp/lib/sntp.c"
                                "../protocols/sntp/config/sntp_cfg.c"
                                "../protocols/mqtt/lib/mqtt.c"
                                "../protocols/mqtt/config/mqtt_cert.c"
                                "../protocols/mqtt/config/mqtt_cfg.c"
                                "../drivers/devices/DHT22/lib/DHT22.c"
                                "../drivers/devices/irq_button/lib/irq_button.c"
                                "../drivers/nvs/nvs.c"
                                "../middleware/azure_interface/azure_interface.c"
                        INCLUDE_DIRS "."
                        EMBED_FILES "../protocols/http/webpage/index.html"
                                    "../protocols/http/webpage/app.css"
                                    "../protocols/http/webpage/app.js"
                                    "../protocols/http/webpage/favicon.ico"
                                    "../protocols/http/webpage/jquery-3.3.1.min.js")
        
